--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>com.microsoft.azure</groupId>
+	  <artifactId>applicationinsights-core</artifactId>
+	  <version>2.2.0</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
